--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.0",
+    "@types/react-scroll": "^1.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "sass": "^1.39.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -40,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
