--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/aos": "^3.0.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.0",
     "@types/react-scroll": "^1.8.3",
+    "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.5",
+    "react-parallax": "^3.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "sass": "^1.39.0",
